add ga, fix log scroll down

--- a/web/app/views/demo.scala.html
+++ b/web/app/views/demo.scala.html
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="//cdn.jsdelivr.net/ace/1.1.9/min/mode-scala.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/ace/1.1.9/min/theme-twilight.js"></script>
     <script type="text/javascript" src="@routes.Assets.versioned("javascripts/demo.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/ga.js")"></script>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" />
     <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/demo.css")" />
 </html>
